crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__top_level_expressions-2.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"123;\\n\\\"hello\\\";\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 4,
                    },
                },
                span: 0..4,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 3,
                            },
                        },
                        span: 0..3,
                        kind: Lit(
                            Num(
                                Num {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 3,
                                        },
                                    },
                                    span: 0..3,
                                    value: "123",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
            },
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 0,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
                span: 5..13,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 0,
                            },
                            end: Position {
                                line: 1,
                                column: 7,
                            },
                        },
                        span: 5..12,
                        kind: Lit(
                            Str(
                                Str {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 7,
                                        },
                                    },
                                    span: 5..12,
                                    value: "hello",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
